opciones dropdown tipo documentos

--- a/ServempMVC/Views/Home/Index.cshtml
+++ b/ServempMVC/Views/Home/Index.cshtml
@@ -1,27 +1,49 @@
 ﻿@{ViewBag.Title = "Buscador";}
-@model ServempMVC.Models.Clientes
+@model ServempMVC.Models.BuscadorClientes
 
 @using (Html.BeginForm("GetClientes", "Home"))
 {
-    <table style="margin-left:15px">
+   <table style="margin-left:15px">
         <tr>
-            <td ><input checked="checked" id="Filtro" name="Filtro" type="radio" value="optCodigo" style="width:20px" onclick="limpiarFiltro()"/></td>
-            <td>DNI</td>
-            <td>@Html.TextBoxFor(s => s.Codigo)</td>
+            <td><input checked="checked" id="Filtro" name="Filtro" type="radio" value="optCodigo" style="width:20px" onclick="limpiarFiltro()"/></td>
+            <td>Tipo de Documento</td>
+            <td>@Html.DropDownListFor(m => m.TipoDocumentoSeleccionado, Model.ListaTipoDocumento(), new { @class = "dropDownListClass" })</td>
+            <td>Nro. de Documento</td>
+            <td>@Html.TextBoxFor(s => s.Codigo,new {@class = "codigoClass"})</td>
         </tr>
         <tr>
-        <td><input id="Filtro" name="Filtro" type="radio" value="optNombre" style="width:20px" onclick="limpiarFiltro()" /></td>
-        <td>Nombre</td>
-        <td>@Html.TextBoxFor(s => s.ApellidoyNombre, (object)new { disabled = "disabled" })</td>
-    </tr>
-    <tr>
-        <td colspan="3">
-            <input type="submit" value="Buscar" style="width:90px;margin-top:20px"/>
-        </td>
-    </tr>
+            <td><input id="Filtro" name="Filtro" type="radio" value="optNombre" style="width:20px" onclick="limpiarFiltro()" /></td>
+            <td>Nombre</td>
+            <td colspan="1">@Html.TextBoxFor(s => s.ApellidoyNombre, (object)new { disabled = "disabled", @class = "nombreClass" })</td>
+        </tr>
+       <tr>
+           <td><input id="Filtro" name="Filtro" type="radio" value="optFinaniera" style="width:20px" onclick="limpiarFiltro()" /></td>
+           <td>Numero Legajo</td>
+           <td>@Html.TextBoxFor(s => s.ApellidoyNombre, (object)new { disabled = "disabled", @class = "nombreClass" })</td>
+           <td>Codigo Financiera</td>
+           <td>@Html.TextBoxFor(s => s.ApellidoyNombre, (object)new { disabled = "disabled", @class = "codigoClass" })</td>
+       </tr>
+        <tr>
+            <td colspan="3">
+                <input type="submit" value="Buscar" style="width:90px;margin-top:20px" />
+            </td>
+        </tr>
     </table>
 }
 
+<style type="text/css">
+    .codigoClass{
+        width:172px;
+    }
+
+    .dropDownListClass{
+        height:25px;
+    }
+
+    .nombreClass{
+        width:204px;
+    }
+</style>
 
 <script type="text/javascript">
     function limpiarFiltro()
@@ -35,8 +57,6 @@
             $('#Codigo').val("");
             $("#Codigo").attr("disabled", "disabled");
             $("#ApellidoyNombre").removeAttr("disabled");
-
-        }
-        
+        }        
     }
 </script>
