--- a/ServempMVC/Views/Shared/_Layout.cshtml
+++ b/ServempMVC/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     </section>
                     <nav>
                         <ul id="menu">
-                            <li>@Html.ActionLink("Buscador", "Index", "Home")</li>
+                            <li>@Html.ActionLink("Buscar", "Index", "Home")</li>
                         </ul>
                     </nav>
                 </div>
